backend/tests/snapshots/matches__create_game.snap
---
source: tests/matches.rs
expression: body
---
{
  "awayScore": 0,
  "createdAt": "[timestamp]",
  "dateTime": "[dateTime]",
  "homeAway": "home",
  "homeScore": 0,
  "id": "[uuid]",
  "location": "Stadium",
  "opponent": "FC Test",
  "status": "scheduled"
}
