backend/tests/snapshots/matches__update_game.snap
---
source: tests/matches.rs
expression: body
---
{
  "awayScore": 1,
  "createdAt": "[timestamp]",
  "dateTime": "[dateTime]",
  "homeAway": "home",
  "homeScore": 3,
  "id": "[uuid]",
  "location": "Stadium",
  "opponent": "FC Test",
  "status": "completed"
}
