backend/tests/snapshots/matches__update_match.snap
---
source: tests/matches.rs
expression: body
---
{
  "awayScore": 1,
  "createdAt": "[timestamp]",
  "dateTime": "2026-06-15T18:00:00Z",
  "homeAway": "home",
  "homeScore": 3,
  "id": "[uuid]",
  "location": "Stadium",
  "opponent": "FC Test",
  "status": "completed"
}
